--- a/public/units/demos/fullgrid/index.html
+++ b/public/units/demos/fullgrid/index.html
@@ -4,25 +4,30 @@
   require(["dojo/store/JsonRest",
     "dijit/Menu",
     "dijit/MenuItem",
-    "dijit/Form/Select",
+    "dijit/form/Select",
+    "dijit/form/CheckBox",
     "gridx/Grid",
     "gridx/modules/HeaderMenu",
     "gridx/modules/extendedSelect/Row",
     "gridx/modules/CellWidget",
     "gridx/modules/Edit",
     "gridx/modules/VirtualVScroller",
-    "gridx/core/model/cache/Async"], function(JsonRest, Menu, MenuItem, Select, Grid, HeaderMenu, Row, CellWidget, Edit, VirtualVScroller, Cache) {
+    "gridx/core/model/cache/Async"], function(JsonRest, Menu, MenuItem, Select, CheckBox, Grid, HeaderMenu, Row, CellWidget, Edit, VirtualVScroller, Cache) {
 
     var grid_store = new JsonRest({
       target: 'data/'
     });
 
     var drop_down_store = new JsonRest({
-      target: 'data/',
+      target: 'data/'
     });
 
-    var hasWidget = false;
+    var drop_down_query = {
+      'entities': [{t: 'account_type', c: ['id', 'type']}] // must get id for store.
+    };
 
+    var hasWidget = false;
+    var drop_down;
     var columns = [{
       id    : 'id',
       field : 'id',
@@ -35,28 +40,26 @@
         if (data.account_txt) return data.account_txt.toUpperCase();
       }
     }, {
-      id    : 'account_type',
+      id    : 'type',
       field : 'type',
       name  : 'Type',
       widgetsInCell: true,
       onCellWidgetCreated: function(cellWidget, column) {
         if (!hasWidget) {
-          var drop_down = new Select({
+          hasWidget = true;
+          drop_down = new Select({
             store: drop_down_store,
+            query: '?' + JSON.stringify(drop_down_query),
             style: "width: 100%"
-          });
+          }).placeAt(cellWidget.domNode);
+          cellWidget.drop_down = drop_down;
         } else {
-          hasWidget = false
+          hasWidget = false;
         }
+      },
+      setCellValue: function(gridData, storeData, cellWidget) {
+        cellWidget.drop_down.set('value', gridData);
       }
-    }, {
-      id    : 'total',
-      field : 'total',
-      name  : 'Total'
-    }, {
-      id    : 'balance',
-      field : 'balance',
-      name  : 'Opening Balance'
     }, {
       id    : 'cost_center_code_1',
       field : 'cost_center_code_1',
@@ -73,14 +76,39 @@
       id    : 'cost_center_code_4',
       field : 'cost_center_code_4',
       name  : 'Cost Center Code 4'
+    }, {
+      id : 'locked', 
+      field : 'locked',
+      name  : 'Locked',
+      width: '35px',
+      widgetsInCell: true,
+      onCellWidgetCreated: function (cellWidget, column) {
+        if (!hasWidget) {
+          hasWidget = true;
+          var chkbx = new CheckBox({
+            checked: false
+          }).placeAt(cellWidget.domNode);
+          cellWidget.chkbx = chkbx;
+        } else {
+          hasWidget = false;
+        }
+      },
+      setCellValue: function(gridData, storeData, cellWidget) {
+        var ckd = (gridData === 0) ? false : true;
+        cellWidget.chkbx.set('checked', ckd);
+      }
     }];
 
     var grid_query = {
-      e: [{t: 'account', c: ['id', 'account_txt']},
+      e: [{t: 'account', c: ['id', 'account_txt', 'cost_center_code_1', 'cost_center_code_2', 'cost_center_code_3', 'cost_center_code_4', 'locked']},
           {t: 'account_type', c: ['type']}],
       jc: [{ts: ['account', 'account_type'], c: ['account_type_id', 'id']}]
     };
 
+    // It seems the grid is fickle with loading this.  Does this
+    // stop the grid from working? Or even displaying?
+    // FIXME: somehow, browser doesn't render grid initially, though
+    // it is rendered in the DOM...  WHAT THE HECK?!?!
     for (var c in columns) { // hack b/c must bind each column.
       // create a drop down menu for sorting the grid
       columns[c].menu = new Menu({
@@ -95,7 +123,8 @@
         parentMenu : columns[c].menu, // ARGH HACK HACK HACK
         label: 'A-Z',
         onClick: function() { // FIXME: Find a better way to encapsulate scope
-          grid_query.o = [{t: grid_query.e[0].t, cl: this.parentCol.field, v: '+'}];
+          table = searchQueryObj(this.parentCol.field, grid_query);
+          grid_query.o = [{t: table, c: this.parentCol.field, v: '+'}];
           this.parentMenu.grid.model.query('?' + JSON.stringify(grid_query));
           this.parentMenu.grid.model.clearCache();
           this.parentMenu.grid.body.refresh();
@@ -107,7 +136,8 @@
         parentMenu : columns[c].menu,
         label: 'Z-A',
         onClick: function() { // FIXME: Find a better way to scope this.
-          grid_query.o = [{t: grid_query.e[0].t, cl: this.parentCol.field, v: '-'}];
+          table = searchQueryObj(this.parentCol.field, grid_query);
+          grid_query.o = [{t: table, c: this.parentCol.field, v: '-'}];
           this.parentMenu.grid.model.query('?' + JSON.stringify(grid_query));
           this.parentMenu.grid.model.clearCache();
           this.parentMenu.grid.body.refresh();
@@ -116,6 +146,8 @@
     
       columns[c].menu.startup();
     }
+
+    console.log('columns', columns); // is the menu present here? // yes
   
     var requetteGrid = JSON.stringify(grid_query);
     
@@ -137,6 +169,16 @@
 
     function formatDate(dateString) {
       return new Date(dateString).toDateString();
+    }
+
+    function searchQueryObj(column, grid_query) {
+      console.log(column);
+      var entities = grid_query.e, e_obj, table; // only have to search entities
+      for (e_obj in entities) {
+        if (entities[e_obj].c.some(function (i) { return i === column})) { // if column is in e_obj 
+          return entities[e_obj].t;
+        }
+      }
     }
 });
 </script>
