--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -1,1 +1,56 @@
-Budgeting Unit
+<link href="./budget.css" rel="stylesheet"> <!-- link is only supposed to go in head .. http://www.w3schools.com/tags/tag_link.asp -->
+<div id="units.budgeting.selectbox"><p>Select an account:</p><div id="units.budgeting.accountselect"></div></div>
+<!-- form template -->
+<div id="units.budgeting.formdisplay">
+  <form id="units.budgeting.budgetform">
+    <fieldset id="prev-fin-year-budget">
+      <legend>Last Financial Year</legend> <!-- In future additions, Jed this stuff -->
+      <legend>Year Ended - <span id="prev-year-ending"></span></legend>
+        <table> <!-- table for period, actuals, budgets -->
+          <thead>
+            <th>Period</th>
+            <th>Actual</th>
+            <th>Budget</th>
+          </thead>
+          <tbody><!-- this must be filled out by dojo toolkit --></tbody>
+        </table>
+    </fieldset> 
+    <fieldset id="current-fin-year-budget"></fieldset>
+    <fieldset id="next-fin-year-budget"></fieldset>
+  </form>
+</div>
+
+<script>
+require(["dojo/request", "dojo/dom-construct", "dojo/store/JsonRest", "dijit/forms/Select", "dojo/domReady!"], 
+  function(request, domConstruct, JsonRest, Select) {
+  
+  var account_select_store = new JsonRest({
+    target: 'data/',
+    getLabel: function(data) {
+      return data.accountTxt + data.id; // coding against the old trackerv6.sql db
+    }
+  });
+
+  var account_select = new Select({
+    store: account_select_store
+  }, "units.budgeting.accountselect");
+
+  
+  var headers = '<thead><th>Period</th><th>Actual</th><th>Budget</th></thead>';
+  var domhead = domConstruct.toDom(headers);
+
+  // only do this after account_select has loaded (API docs)
+  var query = {
+    'entities' : [
+      {t: 'account', c: ['id', 'accountTxt']},
+      {t: 'budget', c: ['id', 'period', 'fiscalyear', 'etc..']},
+    ]
+  };
+  request.get('data/'+JSON.stringify(query)).then(function(results) {
+    // treat results appropriately and build table in DOM
+  });
+
+  //fin
+
+});
+
