syncing with steven

--- a/public/login.html
+++ b/public/login.html
@@ -57,7 +57,7 @@
       <label>Bika</label>
       <div class="row">
           <label>User</label>
-          <input name="username" type="text" />
+          <input name="username" type="text" autofocus />
       </div>
       <div class="row">
         <label>Password</label>
