Budgeting status log

--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -51,6 +51,8 @@
 		// modle : budgeting
 		///////
 		
+		console.log("JsonRest stores not implemented.");
+		
 		//Model
 		var previous_interface = new JsonRest({ 
 		});
