accounts is now chart of accounts; dgrid complete with full Read/Update capacity; db.js UPDATE method appropriated; auth.js switched to work with new UPDATE schema

--- a/public/js/dojoos/dgrid/test/extensions/Pagination.html
+++ b/public/js/dojoos/dgrid/test/extensions/Pagination.html
@@ -125,6 +125,7 @@
 						pagingLinks: false,
 						pagingTextBox: true,
 						firstLastArrows: true,
+						rowsPerPage: 15,
 						pageSizeOptions: [10, 15, 25]
 					}, "grid2");
 					
@@ -177,7 +178,8 @@
 		<div>Buttons to test different stores:
 			<button onclick="grid.set('store', testAsyncStore);">Set to async store</button>
 			<button onclick="grid.set('store', testStore);">Set to sync store</button>
-			<button onclick="grid.set('store', emptyStore);">Set to empty store</button>
+			<button onclick="grid.set('store', emptyAsyncStore);">Set to async empty store</button>
+			<button onclick="grid.set('store', emptyStore);">Set to sync empty store</button>
 			<button onclick="grid.set('store', errorStores.asyncQuery);">Set to async error store</button>
 			<button onclick="grid.set('store', errorStores.query);">Set to sync error store</button>
 		</div>
